<resources>
    <string name="app_name">Trybnb</string>
    <string name="reservations">Reservas</string>
    <string name="create_reservations">Criar Reservas</string>
    <string name="profile">Perfil</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email_empty_warning">O campo Login é obrigatório</string>
    <string name="password_empty_warning">O campo Password é obrigatório</string>
    <string name="name_required">O campo Nome é obrigatório</string>
    <string name="last_name_required">O campo Sobrenome é obrigatório</string>
    <string name="checkin_required">O campo Checkin é obrigatório</string>
    <string name="checkout_required">O campo Checkout é obrigatório</string>
    <string name="additional_needs_required">O campo Necessidades Adicionais é obrigatório</string>
    <string name="total_price_required">O campo Preço Total é obrigatório</string>
    <string name="login_success">Login feito com sucesso!</string>
    <string name="guest_name">Nome do hóspede</string>
    <string name="last_name">Sobrenome do hóspede</string>
    <string name="checkin">Checkin</string>
    <string name="checkout">Checkout</string>
    <string name="additional_information">Informações Adicionais</string>
    <string name="symbol">R$</string>
    <string name="create_reservation">Criar Reserva</string>
    <string name="additional_needs">Necessidades adicionais</string>
    <string name="total_price">Preço total</string>
    <string name="deposit_paid">Depósito Pago</string>
    <string name="booking_success">Reserva feita com sucesso!</string>
    <string name="booking_error">Erro ao criar reserva</string>
</resources>